--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=39ec04a30118851ad641b78fc9ee1b2f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://mateo:mateo@127.0.0.1:3306/movies?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
